// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`MembersPanel should display an empty result if no matching members found 1`] = `
<div class="oc-ml-s">
  <oc-text-input-stub class="oc-text-truncate oc-mr-s oc-mt-m" clearbuttonaccessiblelabel="" clearbuttonenabled="false" disabled="false" fixmessageline="false" id="oc-textinput-3" label="Filter members" modelvalue="no-match" passwordpolicy="" readonly="false" type="text"></oc-text-input-stub>
  <div>
    <div>
      <h3 class="oc-text-bold oc-text-medium">No members found</h3>
    </div>
    <!--v-if-->
    <!--v-if-->
    <!--v-if-->
  </div>
</div>
`;

exports[`MembersPanel should render all members accordingly to their role assignments 1`] = `
<div class="oc-ml-s">
  <oc-text-input-stub class="oc-text-truncate oc-mr-s oc-mt-m" clearbuttonaccessiblelabel="" clearbuttonenabled="false" disabled="false" fixmessageline="false" id="oc-textinput-1" label="Filter members" modelvalue="" passwordpolicy="" readonly="false" type="text"></oc-text-input-stub>
  <div>
    <!--v-if-->
    <div class="oc-mb-m">
      <h3 class="oc-text-bold oc-text-medium">Managers</h3>
      <members-role-section-stub members="[object Object]"></members-role-section-stub>
    </div>
    <div class="oc-mb-m">
      <h3 class="oc-text-bold oc-text-medium">Editors</h3>
      <members-role-section-stub members="[object Object],[object Object]"></members-role-section-stub>
    </div>
    <div class="oc-mb-m">
      <h3 class="oc-text-bold oc-text-medium">Viewers</h3>
      <members-role-section-stub members="[object Object]"></members-role-section-stub>
    </div>
  </div>
</div>
`;
